--- a/app/src/main/res/layout/sdk_view_symbols_emoji_type.xml
+++ b/app/src/main/res/layout/sdk_view_symbols_emoji_type.xml
@@ -9,11 +9,8 @@
     android:orientation="horizontal">
     <ImageView
         android:id="@+id/iv_symbols_emoji_type_return"
-        android:layout_width="40dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="5dp"
-        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:scaleType="centerInside"
         android:src="@drawable/ic_arrow_back_24"/>
     <com.google.android.material.tabs.TabLayout
@@ -22,16 +19,17 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        app:tabMaxWidth="30dp"
+        app:tabMinWidth="0dp"
+        app:tabPaddingStart="7dp"
+        app:tabPaddingEnd="7dp"
+        app:tabPaddingTop="0dp"
+        app:tabPaddingBottom="0dp"
         app:tabIndicator="@null"
         app:tabMode="scrollable"/>
     <ImageView
         android:id="@+id/iv_symbols_emoji_type_delete"
-        android:layout_width="40dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="15dp"
-        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:scaleType="centerInside"
         android:src="@drawable/sdk_skb_key_delete_icon"/>
 </LinearLayout>
